--- a/src/app/dbz/components/dbz/components/list/character/character.component.html
+++ b/src/app/dbz/components/dbz/components/list/character/character.component.html
@@ -1,8 +1,21 @@
 
+
+
 <h4>Agregar Personaje</h4>
 
-<form class="row">
-  <input type="text" class="form-control mb-2" placeholder="Nombre">
-  <input type="Number" class="form-control mb2" placeholder="Poder">
+<form class="row" (ngSubmit)="emitCharacter()">
+  <input
+  type="text"
+  [(ngModel)]="character.name"
+  name="name"
+  class="form-control mb-2"
+  placeholder="Nombre">
+  <input type="Number"
+  [(ngModel)]="character.power"
+  name="power"
+  class="form-control mb2"
+  placeholder="Poder">
   <button type="submit" class="btn btn-primary">Agregar</button>
+
+  <!-- <pre>{{character | json}}</pre> -->
 </form>
