--- a/src/app/dbz/components/dbz/components/list/list.component.html
+++ b/src/app/dbz/components/dbz/components/list/list.component.html
@@ -5,7 +5,7 @@
   let isOdd = odd;
 
   "
-   class="list-group-item"
+   class="list-group-item d-flex justify-content-between align-items-center"
    [ngClass]="{
     'list-group-item-dark': isLast,
     'list-group-item-primary':isEven
@@ -13,11 +13,15 @@
 
    }
    ">
-    <span class="text-primary">{{i+1}}.</span>
 
-    <span>{{character.name}} - </span>
-    <strong>Power: </strong>
-    <span>{{character.power}}</span>
+    <div>
+      <span class="text-primary">{{i+1}}.</span>
+
+      <span>{{character.name}} - </span>
+      <strong>Power: </strong>
+      <span>{{character.power}}</span>
+    </div>
+      <button (click)="onDeleteCharacter(i)" class="btn btn-danger">X</button>
 
     <!-- <span>Es el primero: {{isFirst}}</span>
     <span>Es el ultimo: {{isLast}}</span>
