--- a/src/app/dbz/components/dbz/components/list/list.component.html
+++ b/src/app/dbz/components/dbz/components/list/list.component.html
@@ -21,7 +21,7 @@
       <strong>Power: </strong>
       <span>{{character.power}}</span>
     </div>
-      <button (click)="onDeleteCharacter(i)" class="btn btn-danger">X</button>
+      <button (click)="onDeleteCharacter(character.id)" class="btn btn-danger">X</button>
 
     <!-- <span>Es el primero: {{isFirst}}</span>
     <span>Es el ultimo: {{isLast}}</span>
